2014-09-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(r173929): Web inspector doesn't work after r173929 when INSPECTOR_SERVER is enabled
        https://bugs.webkit.org/show_bug.cgi?id=137150

        Reviewed by Timothy Hatcher.

        The inspector doesn't show any information about the inspected
        page because it's sending messages to a remote frontend that is
        not running.

        * WebProcess/WebPage/WebInspector.cpp:
        (WebKit::WebInspector::WebInspector): Initialize m_remoteFrontendConnected.
        (WebKit::WebInspector::sendMessageToFrontend): Send
        SendMessageToRemoteFrontend message to the UI process when remote
        frontend is connected, or SendMessageToFrontend message to
        WebInspectorUI otherwise.
        (WebKit::WebInspector::remoteFrontendConnected): Set m_remoteFrontendConnected to true.
        (WebKit::WebInspector::remoteFrontendDisconnected): Set m_remoteFrontendConnected to false.
        * WebProcess/WebPage/WebInspector.h:

2014-09-26  Alberto Garcia  <berto@igalia.com>

        [GTK] Don't include full path names in WebKitEnumTypes.h
        https://bugs.webkit.org/show_bug.cgi?id=137148

        Reviewed by Carlos Garcia Campos.

        Replace @filename@ with @basename@ in the template, since we don't
        want to include the full path name in the generated header.

        * UIProcess/API/gtk/WebKitEnumTypes.h.template:

2014-09-25  Yusuke Suzuki  <utatane.tea@gmail.com>

        Clean up unused parameter warnings
        https://bugs.webkit.org/show_bug.cgi?id=137107

        Reviewed by Benjamin Poulain.

        * Scripts/webkit/messages.py:
        (generate_message_handler):
        Sometimes generated code doesn't use `connection` parameter. So `UNUSED_PARAM(connection)` is necessary.
        * UIProcess/API/C/WKPage.cpp:
        (WKPageIsPlayingAudio):

2014-09-25  Christophe Dumez  <cdumez@apple.com>
